--- a/templates/expenses/view_expense.html
+++ b/templates/expenses/view_expense.html
@@ -17,6 +17,9 @@
             <i class="fas fa-arrow-left me-2"></i> Ledger
         </a>
         <div class="d-flex gap-2">
+            <a href="{{ url_for('expense_pdf', expense_id=expense.expense_id) }}" class="btn btn-danger rounded-pill px-4 shadow-sm">
+                <i class="fas fa-file-pdf me-2"></i> Download PDF
+            </a>
             <a href="{{ url_for('edit_expense', expense_id=expense.expense_id) }}" class="btn btn-success rounded-pill px-4 shadow-sm">
                 <i class="fas fa-edit me-2"></i> Edit
             </a>
