--- a/templates/purchases/edit_purchase.html
+++ b/templates/purchases/edit_purchase.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="glass-panel p-5">
-        <form action="{{ url_for('update_purchase', purchase_id=purchase.id) }}" method="POST" id="purchaseForm">
+        <form action="{{ url_for('edit_purchase', purchase_id=purchase.id) }}" method="POST" id="purchaseForm">
             
             <div class="row g-4 mb-4">
                 <div class="col-md-4">
@@ -171,3 +171,4 @@
     });
 </script>
 {% endblock %}
+
